--- a/contact/style.css
+++ b/contact/style.css
@@ -1,42 +1,34 @@
-html,
-body {
-    height: 100%;
-    /* Asegura que el body y html ocupen todo el alto de la ventana */
-    margin: 0;
-    /* Elimina cualquier margen predeterminado */
-    padding: 0;
-    /* Elimina cualquier padding predeterminado */
+html, body {
+    height: 100%; /* Asegura que el body y html ocupen todo el alto de la ventana */
+    margin: 0; /* Elimina cualquier margen predeterminado */
+    padding: 0; /* Elimina cualquier padding predeterminado */
     display: flex;
-    justify-content: center;
-    /* Centra el contenedor horizontalmente */
-    align-items: center;
-    /* Centra el contenedor verticalmente */
+    flex-direction: column;
     background-image: url('../img/Casa-Historica.jpg');
-    background-size: cover;
-    /* Ajusta la imagen para que cubra todo el fondo */
-    background-repeat: no-repeat;
-    /* Evita que la imagen se repita */
-    background-position: center;
-    /* Centra la imagen de fondo */
-    background-attachment: fixed;
-    /* Hace que la imagen de fondo permanezca fija */    
-    overflow-x: hidden;
-    /* Evita el scroll horizontal */
+    background-size: cover; /* Ajusta la imagen para que cubra todo el fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center; /* Centra la imagen de fondo */
+    background-attachment: fixed; /* Hace que la imagen de fondo permanezca fija */
+    width: 100%; /* Asegura que el ancho del body y html cubra todo el viewport */
+    overflow-x: hidden; /* Evita el scroll horizontal */
 }
 
 /* Estilo del contenedor del formulario */
 .container {
-    margin-top: 20%;
+    margin-top: 15%;
     /* Reduce el margen superior */
-    background-color: rgba(255, 255, 255, 0.8);
+    margin-bottom: 5%;    
+    text-align: center;
+    color: white;
+    flex: 1;
+    background-color: rgba(44, 3, 110, 0.8);
     /* Fondo blanco semitransparente para el formulario */
-    padding: 30px;
+    padding: 20px;
     /* Espaciado interno del formulario */
     border-radius: 8px;
     /* Bordes redondeados */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /* Sombra para efecto de elevación */
-    text-align: center;
     width: 90%;
     /* El contenedor ocupa el 90% del ancho disponible */
     max-width: 320px;
@@ -60,7 +52,7 @@ body {
 .form-label {
     font-weight: bold;
     /* Hace que el texto de los labels sea negrita */
-    color: #333;
+    color: #fafafa;
     /* Color del texto de los labels */
     text-align: left;
     /* Alineación a la izquierda */
@@ -85,13 +77,7 @@ body {
 }
 
 /* Estilo del botón de envío */
-.btn-primary {
-    background-color: #007bff;
-    /* Color de fondo azul para el botón */
-    border-color: #007bff;
-    /* Color de borde del botón */
-    width: 100%;
-    /* El botón ocupa todo el ancho del contenedor */
+.btn-light {      
     padding: 10px;
     /* Espaciado interno del botón */
     font-size: 16px;
@@ -104,50 +90,100 @@ body {
     /* Espacio arriba del botón */
 }
 
-/* Efecto hover para el botón */
-.btn-primary:hover {
-    background-color: #0056b3;
-    /* Color de fondo azul más oscuro en hover */
-}
-
 /* Estilo del área de texto para la consulta */
 textarea.form-control {
     resize: none;
     /* Impide que el usuario cambie el tamaño del área de texto */
 }
 
+/* Estilo del footer */
+.footer {
+    height: 60px; /* Ajusta la altura del footer según tus necesidades */
+    display: flex;
+    align-items: center; /* Centra verticalmente el contenido del footer */
+    justify-content: center; /* Centra horizontalmente el contenido del footer */
+    background-color: rgba(255, 255, 255, 0.8); /* Fondo blanco semitransparente para mejor legibilidad */
+    width: 100%; /* Asegura que el footer ocupe todo el ancho */
+    position: fixed; /* Fija el footer en la parte inferior */
+    bottom: 0; /* Posiciona el footer en la parte inferior */
+    z-index: 1000; /* Asegura que el footer esté por encima de otros elementos */
+}
+.whatsapp-button {
+    position: fixed; /* Fija la posición en la pantalla */
+    bottom: 20px; /* Separa el botón 20px del borde inferior */
+    right: 25px; /* Separa el botón 20px del borde derecho */
+    background-color: #25D366; /* Color de fondo verde de WhatsApp */
+    color: white; /* Color del ícono */
+    border: none; /* Elimina el borde predeterminado del botón */
+    border-radius: 50%; /* Hace que el botón sea circular */
+    width: 60px; /* Ancho del botón */
+    height: 60px; /* Alto del botón */
+    display: flex; /* Utiliza flexbox para centrar el icono */
+    align-items: center; /* Centra verticalmente el icono dentro del botón */
+    justify-content: center; /* Centra horizontalmente el icono dentro del botón */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Añade una sombra */
+    cursor: pointer; /* Cambia el cursor a un puntero al pasar sobre el botón */
+    transition: background-color 0.3s ease; /* Añade una transición suave para el cambio de color */
+}
+
+.whatsapp-button:hover {
+    background-color: #1e9e52; /* Cambia el color de fondo cuando el usuario pasa el mouse por encima */
+}
+
+.whatsapp-button i {
+    font-size: 35px; /* Ajusta el tamaño del ícono */
+}
+
 /* Media queries para diferentes tamaños de pantalla */
 @media (max-width: 768px) {
-    .container {
-        padding: 20px;
-        /* Reduce el padding en pantallas más pequeñas */
-        margin-top: 10%;
-        /* Ajusta el margen superior */
+    .navbar {
+        height: 60px; /* Reduce la altura del navbar en pantallas más pequeñas */
+        font-size: 20px; /* Reduce el tamaño de fuente en pantallas más pequeñas */
     }
 
-    .btn-primary {
-        font-size: 14px;
-        /* Reduce el tamaño de la fuente del botón en pantallas más pequeñas */
+    .footer {
+        height: 50px; /* Reduce la altura del footer en pantallas más pequeñas */
+        font-size: 18px; /* Reduce el tamaño de fuente en pantallas más pequeñas */
+        position: fixed; /* Fija el footer en la parte inferior */
+    }    
+
+    .container {
+        padding: 10px; /* Reduce el padding en pantallas más pequeñas */
+    }
+    .whatsapp-button {
+        width: 50px; /* Reduce el ancho del botón en pantallas más pequeñas */
+        height: 50px; /* Reduce el alto del botón en pantallas más pequeñas */
+    }
+
+    .whatsapp-button i {
+        font-size: 20px; /* Reduce el tamaño del ícono en pantallas más pequeñas */
     }
 }
 
 @media (max-width: 480px) {
+    .navbar {
+        height: 50px; /* Reduce aún más la altura del navbar en pantallas muy pequeñas */
+        font-size: 18px; /* Reduce aún más el tamaño de fuente en pantallas muy pequeñas */
+    }
+
+    .footer {
+        height: 40px; /* Reduce la altura del footer en pantallas muy pequeñas */
+        font-size: 16px; /* Reduce el tamaño de fuente en pantallas muy pequeñas */
+        position: fixed; /* Fija el footer en la parte inferior */
+    }
+
     .container {
-        padding: 15px;
-        /* Reduce aún más el padding en pantallas muy pequeñas */
-        margin-top: 20%;
-        /* Ajusta el margen superior */
+        padding: 5px; /* Reduce aún más el padding en pantallas muy pequeñas */
+    }
+    .whatsapp-button {
+        width: 40px; /* Reduce aún más el ancho del botón en pantallas muy pequeñas */
+        height: 40px; /* Reduce aún más el alto del botón en pantallas muy pequeñas */
+        bottom: 15px; /* Ajusta la distancia desde el borde inferior en pantallas muy pequeñas */
+        right: 15px; /* Ajusta la distancia desde el borde derecho en pantallas muy pequeñas */
     }
 
-    .form-control {
-        padding: 8px;
-        /* Ajusta el padding de los campos de entrada */
-    }
-
-    .btn-primary {
-        font-size: 14px;
-        /* Ajusta el tamaño de fuente del botón */
-        padding: 8px;
-        /* Ajusta el padding del botón */
+    .whatsapp-button i {
+        font-size: 18px; /* Reduce aún más el tamaño del ícono en pantallas muy pequeñas */
     }
 }
+
