--- a/card1/style.css
+++ b/card1/style.css
@@ -76,19 +76,11 @@ html, body {
     .footer {
         height: 50px; /* Reduce la altura del footer en pantallas más pequeñas */
         font-size: 18px; /* Reduce el tamaño de fuente en pantallas más pequeñas */
-    }
-
-    .card {
-        width: 250px; /* Ajusta el ancho de las cards en pantallas más pequeñas */
-        margin: 12px; /* Espacio entre las cards */
-    }
-
-    .card-img-top {
-        height: 150px; /* Ajusta la altura de las imágenes en pantallas más pequeñas */
-    }
+    }   
 
     .container {
         padding: 10px; /* Reduce el padding en pantallas más pequeñas */
+        margin-top: 30%;
     }
     .whatsapp-button {
         width: 50px; /* Reduce el ancho del botón en pantallas más pequeñas */
@@ -109,19 +101,11 @@ html, body {
     .footer {
         height: 40px; /* Reduce la altura del footer en pantallas muy pequeñas */
         font-size: 16px; /* Reduce el tamaño de fuente en pantallas muy pequeñas */
-    }
-
-    .card {
-        width: 200px; /* Ajusta el ancho de las cards en pantallas muy pequeñas */
-        margin: 10px; /* Espacio entre las cards */
-    }
-
-    .card-img-top {
-        height: 120px; /* Ajusta la altura de las imágenes en pantallas muy pequeñas */
-    }
+    }    
 
     .container {
         padding: 5px; /* Reduce aún más el padding en pantallas muy pequeñas */
+        margin-top: 30%;
     }
     .whatsapp-button {
         width: 40px; /* Reduce aún más el ancho del botón en pantallas muy pequeñas */
