--- a/card2/style.css
+++ b/card2/style.css
@@ -3,13 +3,19 @@ html, body {
     margin: 0; /* Elimina cualquier margen predeterminado */
     padding: 0; /* Elimina cualquier padding predeterminado */
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;   
+    background-image: url('../img/card2/fondo.avif');
+    background-color: rgba(255, 255, 255, 0.1); /* Agrega un color blanco semitransparente al fondo */
+    background-size: cover; /* Ajusta la imagen para que cubra todo el fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    background-position: center; /* Centra la imagen de fondo */
+    background-attachment: fixed; /* Hace que la imagen de fondo permanezca fija */ 
 }
 
 .container{
     text-align: center;
     flex: 1;
-    margin-top: 20%;
+    margin-top: 10%;
 }
 
 .navbar {
@@ -18,6 +24,26 @@ html, body {
     align-items: center; /* Centra verticalmente el contenido */
     font-size: 25px;
 }
+
+img{
+    border-color: black;
+    border-style: double;
+    border-radius: 5%;
+}
+
+img.fixed-size {
+    width: 100%;
+    height: 300px; /* Ajusta esta altura según tus necesidades */
+    object-fit: cover; /* Ajusta la imagen para que cubra el área, recortando si es necesario */
+  }
+  
+  .datos{
+    background-color: rgba(255, 255, 255, 0.5);
+    border-color: black;
+    border-style: double;
+    border-radius: 5%;
+    padding: 2%;
+  }
 /* Estilo del footer */
 .footer {
     height: 60px; /* Ajusta la altura del footer según tus necesidades */
