finalicé las recetas y está creada la carpeta store con las imagenes

--- a/card2/style.css
+++ b/card2/style.css
@@ -25,6 +25,11 @@ html, body {
     font-size: 25px;
 }
 
+.logo{
+    height: 60px;
+    width: 80px;
+}
+
 img{
     border-color: black;
     border-style: double;
