--- a/store/style.css
+++ b/store/style.css
@@ -7,10 +7,13 @@ html, body {
 }
 
 .container{
-    text-align: center;
-    flex: 1;
-    margin-top: 10%;
-    margin-bottom: 5%;
+    gap: 30px;
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 5%;
 }
 
 .navbar {
@@ -34,22 +37,54 @@ html, body {
 
 /* Estilo de las cards */
 .card {
-    width: 400px; /* Fija el ancho de las cards */
-    margin: 15px; /* Espacio entre las cards */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para efecto de elevación */
-    border-radius: 8px; /* Bordes redondeados */
-    background-color: white; /* Fondo blanco de las cards */
-    flex: 1 1 auto; /* Permite que las cards se redimensionen de forma responsive */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 300px; /* Ancho fijo para todas las tarjetas */
+    height: 450px; /* Altura fija para todas las tarjetas */
+    margin-bottom: 5%;    
+    overflow: hidden; /* Evita desbordamientos */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra para darle un efecto visual */    
 }
 
-/* Estilo de las imágenes de las cards */
-.card-img-top {
-    height: 400px; /* Ajusta la altura según tus necesidades */
-    object-fit: cover; /* Ajusta la imagen para cubrir el contenedor sin distorsión */
-    width: 100%; /* Asegura que la imagen ocupe todo el ancho del contenedor */
-    border-top-left-radius: 8px; /* Bordes redondeados en la parte superior de la imagen */
-    border-top-right-radius: 8px; /* Bordes redondeados en la parte superior de la imagen */
+
+.card-body{    
+    text-align: center;    
 }
+
+.card .card-image img {
+    width: 100%; /* Ajusta la imagen al ancho de la tarjeta */
+    height: 200px; /* Mantén la proporción de la imagen */
+    object-fit: cover; /* Recorta la imagen si es necesario */
+}
+
+
+.card .card-name {    
+    font-size: 24px;
+    text-align: center;    
+    font-weight: bold; 
+    margin-top: 10px;  
+}
+
+.card .card-price {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    display: block;
+    width: 1fr;
+}
+
+.card .card-button {
+    text-align: center;
+    display: block;
+    margin-top: auto;
+    text-align: center;
+    padding: 10px;    
+    width: 100%;
+    cursor: pointer;
+}
+
 
 /* Estilo del footer */
 .footer {
