--- a/store/style.css
+++ b/store/style.css
@@ -59,6 +59,12 @@ html, body {
     object-fit: cover; /* Recorta la imagen si es necesario */
 }
 
+.carousel-item img {
+    width: 100%; /* Ajusta la imagen al ancho de la tarjeta */
+    height: 200px; /* Altura fija para las imágenes */
+    object-fit: cover; /* Recorta la imagen si es más grande, manteniendo el tamaño */
+}
+
 
 .card .card-name {    
     font-size: 24px;
